agregando etiqueta html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="Imagenes/LOGO.ico" type="image/x-icon">
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-72a9c75a-3033-4099-aa26-14e8081c9632"></div>
+    <meta name="google-site-verification" content="q3uTF7ksvrfJupg-eVg7sr9MtjWQvFVlXpnf6jGP7xI" />
 </head>
 <body>
     <header class="header">
