--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruta de Estación</title>
+    <meta name="descripcion" content="La mermelada es un producto delicioso y nutritivo que se elabora con frutas y azúcar cocidas a fuego lento. En nuestra empresa, utilizamos frutas frescas y de temporada, seleccionadas cuidadosamente para garantizar la mejor calidad y sabor. Nuestras mermeladas son 100% naturales, sin conservantes ni colorantes artificiales. Las ofrecemos en una gran variedad de sabores, desde los clásicos como fresa, naranja o melocotón, hasta los más exóticos como mango, maracuyá o kiwi. Nuestras mermeladas son ideales para acompañar el desayuno, el postre o la merienda, o para regalar a tus seres queridos. Prueba nuestras mermeladas y descubre el placer de lo natural.">
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="Imagenes/LOGO.ico" type="image/x-icon">
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
