--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-72a9c75a-3033-4099-aa26-14e8081c9632"></div>
     <meta name="google-site-verification" content="q3uTF7ksvrfJupg-eVg7sr9MtjWQvFVlXpnf6jGP7xI" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RLH3K946RF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RLH3K946RF');
+</script>
 </head>
 <body>
     <header class="header">
