--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruta de Estación</title>
-    <meta name="description" content="La mermelada es un producto delicioso y nutritivo que se elabora con frutas y azúcar cocidas a fuego lento. En nuestra empresa, utilizamos frutas frescas y de temporada, seleccionadas cuidadosamente para garantizar la mejor calidad y sabor. Nuestras mermeladas son 100% naturales, sin conservantes ni colorantes artificiales. Las ofrecemos en una gran variedad de sabores, desde los clásicos como fresa, naranja o melocotón, hasta los más exóticos como mango, maracuyá o kiwi. Nuestras mermeladas son ideales para acompañar el desayuno, el postre o la merienda, o para regalar a tus seres queridos. Prueba nuestras mermeladas y descubre el placer de lo natural.">
+    <meta name="description" content="La mermelada es un producto delicioso y 
+    nutritivo, utilizamos frutas frescas y de temporada. Prueba nuestras mermeladas y descubre el placer de lo natural.">
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="Imagenes/LOGO.ico" type="image/x-icon">
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-72a9c75a-3033-4099-aa26-14e8081c9632"></div>
-    <meta name="google-site-verification" content="q3uTF7ksvrfJupg-eVg7sr9MtjWQvFVlXpnf6jGP7xI" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RLH3K946RF"></script>
 <script>
@@ -24,7 +24,7 @@
 <body>
     <header class="header">
         <div class="menu container">
-            <a href="#" class="logo"><img src="Imagenes/IMAGOTIPOP.png" alt="logo"></a>
+            <a href="#" class="logo"><img src="Imagenes/WEB/IMAGOTIPOP.webp" alt="logo"></a>
             <input type="checkbox"id= "menu">
             <label for="menu">
                 <img src="Imagenes/menu.svg" class="menu-icono" alt="menu">
@@ -41,7 +41,7 @@
 
         <div class="header-content container">
             <div class="header-img">
-                <img src="Imagenes/mermelada.png" alt="">
+                <img src="Imagenes/WEB/mermelada.webp" alt="">
             </div>
             <div class="header-txt">
                 <h1>Te recomendamos probarlas cuanto antes…</h1>
@@ -117,7 +117,7 @@
             <div class="cliente-1">
                 <div class="cliente-txt"></div>
                 <div class="cliente-info">
-                    <img src="Imagenes/abuelos.png" alt="">
+                    <img src="Imagenes/WEB/abuelos.webp" alt="abuelos">
                     <div class =cliente-in>
                         <p>
                             “Mi esposa y yo, desde mucho nos gusta 
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="cliente-info">
-                    <img src="Imagenes/señora.png" alt="">
+                    <img src="Imagenes/WEB/señora.webp" alt="madre de familia">
                     <div class="cliente-in">
                         <p>
                             “Soy madre de familia, aquella 
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="cliente-info">
-                    <img src="Imagenes/señor.png" alt="">
+                    <img src="Imagenes/WEB/señor.webp" alt="señor">
                     <div class="cliente-in">
                         <p>
                             “Tengo un hermana pequeña, y lo que nos 
@@ -163,9 +163,9 @@
                     la boca con solo nombrarlo!
                 </p>
                 <form class="rellenar">
-                    <input type="text" name="" id="nombre" value="Mi nombre es:">
-                    <input type="text" name="" id="" value="Mi apellido es:">
-                    <input type="text" name="" id="" value="Correo electrónico">
+                    <input type="text" name="" id="nombre" value="Nombre completo">
+                    <input type="text" name="" id="" value="Apellido completo">
+                    <input type="text" name="" id="" value="Su correo electrónico">
                     <input type="submit" class="btn-enviar" name="" id="" value="Enviar">
                 </form>
             </div>
@@ -177,19 +177,19 @@
     <footer class="footer">
         <div class="footer-content container">
             <div class="conocenos">
-                <img src="Imagenes/Fruta de Estación-negativo.png"> 
+                <img src="Imagenes/WEB/Fruta-de-Estación-negativo.webp"> 
                 <p>es una de las mejores empresas de venta de alimentos artesanales, el resultado será mucho más bueno y tendrá un sabor como nunca antes habías probado.</p>
                 <div>
                     <div class="direccion">
-                        <img src="Imagenes/DIRECC.png">
+                        <img src="Imagenes/WEB/DIRECC.webp" alt="direccion">
                         <p>Av. Arica de la Central, Land.</p>
                     </div>
                     <div class="direccion">
-                        <img src="Imagenes/CELU.png">
+                        <img src="Imagenes/WEB/CELU.webp" alt="celular">
                         <p>9226413284</p>
                     </div>
                     <div class="direccion">
-                        <img src="Imagenes/Carta.png">
+                        <img src="Imagenes/WEB/carta.webp" alt="carta">
                         <p>frutaestación@gmil.com</p>
                     </div>
                 </div>
