--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     nutritivo, utilizamos frutas frescas y de temporada. Prueba nuestras mermeladas y descubre el placer de lo natural.">
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="Imagenes/LOGO.ico" type="image/x-icon">
+    <meta http-equiv="Permissions-Policy" content="interest-conhort=()">
+
+    <meta property="og:site_name" content="Fruta de Estación">
+    <meta property="og:title" content="Fruta de Estación - mermelada natural">
+    <meta property="og:description" content="La mermelada es un producto delicioso y 
+    nutritivo, utilizamos frutas frescas y de temporada. Prueba nuestras mermeladas y descubre el placer de lo natural">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://aangelicab.github.io/">
+    <meta property="og:image" content="https://aangelicab.github.io/Imagenes/WEB/mermelada.webp">
+    
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <div class="elfsight-app-72a9c75a-3033-4099-aa26-14e8081c9632"></div>
     <!-- Google tag (gtag.js) -->
@@ -51,9 +61,9 @@
                     decisión ¿Te lo vas a perder?
                 </p>
                 <form class="formulario">
-                    <input type="text" name="" id="nombre" value="Mi nombre es:">
-                    <input type="text" name="" id="" value="Mi apellido es:">
-                    <input type="text" name="" id="" value="Correo electrónico">
+                    <input type="text" name="" id="nombre" placeholder="name" value="Mi nombre es:">
+                    <input type="text" name="" id="" placeholder="apellidoes" value="Mi apellido es:">
+                    <input type="text" name="" id="" placeholder="email" value="Correo electrónico">
                     <input type="submit" class="btn-enviar" name="" id="" value="Enviar">
                 </form>
             </div>
@@ -163,9 +173,9 @@
                     la boca con solo nombrarlo!
                 </p>
                 <form class="rellenar">
-                    <input type="text" name="" id="nombre" value="Nombre completo">
-                    <input type="text" name="" id="" value="Apellido completo">
-                    <input type="text" name="" id="" value="Su correo electrónico">
+                    <input type="text" name="" id="nombre" placeholder="nombre" value="Nombre completo">
+                    <input type="text" name="" id="apellidos" placeholder="apellido" value="Apellido completo">
+                    <input type="text" name="" id="sucorreo" placeholder="correo" value="Su correo electrónico">
                     <input type="submit" class="btn-enviar" name="" id="" value="Enviar">
                 </form>
             </div>
