--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="Imagenes/LOGO.ico" type="image/x-icon">
     <meta http-equiv="Permissions-Policy" content="interest-conhort=()">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3198632163682339"
+     crossorigin="anonymous">
+     </script>
 
     <meta property="og:site_name" content="Fruta de Estación">
     <meta property="og:title" content="Fruta de Estación - mermelada natural">
