--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="description" content="La mermelada es un producto delicioso y 
     nutritivo, utilizamos frutas frescas y de temporada. Prueba nuestras mermeladas y descubre el placer de lo natural.">
     <link rel="stylesheet" href="estilos.css">
-    <link rel="shortcut icon" href="Imagenes/LOGO.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo1.2-03.ico" type="image/x-icon">
     <meta http-equiv="Permissions-Policy" content="interest-conhort=()">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3198632163682339"
-     crossorigin="anonymous">
-     </script>
+    crossorigin="anonymous">
+    </script>
 
     <meta property="og:site_name" content="Fruta de Estación">
     <meta property="og:title" content="Fruta de Estación - mermelada natural">
@@ -37,21 +37,22 @@
 <body>
     <header class="header">
         <div class="menu container">
-            <a href="#" class="logo"><img src="Imagenes/WEB/IMAGOTIPOP.webp" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="Imagenes/Logotipo-frutixia.webp" alt="logo" style="width: 200px;">
+            </a>
             <input type="checkbox"id= "menu">
             <label for="menu">
                 <img src="Imagenes/menu.svg" class="menu-icono" alt="menu">
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="producto.html">Productos</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="redes.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
-
+    </header>
         <div class="header-content container">
             <div class="header-img">
                 <img src="Imagenes/WEB/mermelada.webp" alt="">
@@ -71,7 +72,7 @@
                 </form>
             </div>
         </div>
-    </header>
+
     
 
     <section class="beneficios">
@@ -233,7 +234,7 @@
                 <h3>LEGAL</h3>
                 <ul>
                     <li><a href="#">Accesibilidad</a></li>
-                    <li><a href="#">Pólitica de privacidad</a></li>
+                    <li><a href="privacidad.html">Pólitica de privacidad</a></li>
                     <li><a href="#">Pólitica cookis</a></li>
                     <li><a href="#">Aviso legal</a></li>
                     <li><a href="#">Condiciones de compras</a></li>
