--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:title" content="Fruta de Estación - mermelada natural">
     <meta property="og:description" content="La mermelada es un producto delicioso y 
     nutritivo, utilizamos frutas frescas y de temporada. Prueba nuestras mermeladas y descubre el placer de lo natural">
+    <meta name="google-site-verification" content="ER3Upyni7ylmQGReJRpAMOkArbIgM4eGUHfNERwbVYY" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aangelicab.github.io/">
     <meta property="og:image" content="https://aangelicab.github.io/Imagenes/WEB/mermelada.webp">
