--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=1404751270145730&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+    <img src="https://tracker.metricool.com/c3po.jpg?hash=6574802f7bfbe26a581442655ba0019d"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
